Fix bugs CORS websocket